--- a/client/main.css
+++ b/client/main.css
@@ -20,6 +20,20 @@
     border-color: #aaa;
 }
 
-.sub-form .field-list.preview {
-    border-left: 5px solid rebeccapurple;
+.sub-form .field {
+    display: inline-block;
+    float: left;
+    margin-right: 5px;
+}
+
+.sub-form .autoform-array-item {
+    float: left;
+}
+
+.sub-form .autoform-array-item label {
+    display: none;
+}
+
+.sub-form .autoform-remove-item {
+    margin-top: 5px;
 }
