--- a/main/client/themes/tumenshuvuut/tumenshuvuut.css
+++ b/main/client/themes/tumenshuvuut/tumenshuvuut.css
@@ -31,6 +31,14 @@
     margin-top: 10px;
   }
 
+  .no-border{
+    border: none;
+  }
+
+  .ml-10{
+    margin-left: 10px;
+  }
+
   .nav-left li{
     border: none;
   }
