--- a/main/client/themes/tumenshuvuut/tumenshuvuut.css
+++ b/main/client/themes/tumenshuvuut/tumenshuvuut.css
@@ -281,6 +281,9 @@
   .apu-container .bbtv_logo {
     width: 150px;
   }
+  .panel > table.bbtvtabledetail > tbody:first-child > tr:first-child td {
+    width: 30%;
+}
   
   @media (min-width: 920px) and (max-width: 1290px) {
     .apu-panel-title {
